# wordson

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.prod.txt  requirements.txt
backend/: settings.py
wordson/: manage.py
wordson/wordson/: asgi.py  settings.py  urls.py  wsgi.py
